--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,9 @@
-<nav>
-  <ul class="nav-bar">
+<div class="header">
+  <ul class="menu">
     <li><a href="/">Home</a></li>
+    <li><a href="/new-blog">Make a New Post</a></li>
     <li><a href="/search">Search</a></li>
+
     <li class="dropdown">
       <span>Categories ▾</span>
       <ul class="categories-menu">
@@ -10,4 +12,4 @@
       </ul>
     </li>
   </ul>
-</nav>
+</div>
