--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="nav">
   <ul class="menu">
     <li><a href="/">Home</a></li>
     <li><a href="/new-blog">Make a New Post</a></li>
