--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('./partials/head.ejs') %>
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('./partials/header.ejs') %> <%- include('./partials/nav.ejs') %>
 
     <div class="content">
       <h1>Books to Read...</h1>
