--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,22 @@
 <div class="nav">
   <ul class="menu">
     <li><a href="/">Home</a></li>
-    <li><a href="/new-blog">Make a New Post</a></li>
-    <li><a href="/search">Search</a></li>
-
     <li class="dropdown">
-      <span>Categories ▾</span>
+      <span>Categories▾</span>
       <ul class="categories-menu">
         <li><a href="#">Blogs</a></li>
         <li><a href="#">Quotes</a></li>
       </ul>
     </li>
+    <li><a href="/search">Search</a></li>
   </ul>
+  <div class="add-new-blog-container">
+    <a class="add-new-blog" href="/new-blog">
+      <img
+        class="add-new-blog-icon"
+        src="./images/add-button-opt.svg"
+        alt="An icon with a plus sign that directs you to the new-blog page."
+      />
+    </a>
+  </div>
 </div>
