modified some file names for clarity. added a not-quite-working MVC format.

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include('./partials/header.ejs') %> <%- include('./partials/nav.ejs') %>
     <h1>Add a new entry below!</h1>
-    <form action="" method="" class="add-blog-form">
+    <form action="/blogs" method="POST" class="add-blog-form">
       <div class="form-row">
         <label for="book-title" class="label">Book Title</label>
         <input
