--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,12 +23,12 @@
       </ul>
     </li>
   </ul>
-  <div class="add-new-blog-container">
-    <a class="add-new-blog" href="/new-blog">
+  <div class="create-blog-container">
+    <a class="create-blog" href="/create">
       <img
-        class="add-new-blog-icon"
+        class="create-blog-icon"
         src="./images/add-button-opt.svg"
-        alt="An icon with a plus sign that directs you to the new-blog page."
+        alt="An icon with a plus sign that directs you to the create page."
       />
     </a>
   </div>
