--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
   <body>
-    <%- include('./partials/header.ejs') %> <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/header.ejs') %> <%- include('../partials/nav.ejs')
+    %>
 
     <div class="content">
       <div class="content-box">
