--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
     <h1>This is a particular blog.</h1>
   </body>
 </html>
