--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -9,7 +9,7 @@
       <div class="content-box">
         <div class="content-box-heading">
           <div class="title-author">
-            <h1 class="title">Books to Read...</h1>
+            <h1 class="title"></h1>
             <p class="author">by Author Person</p>
           </div>
           <div class="content-box-image">
