--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,8 +23,8 @@
       </ul>
     </li>
   </ul>
-  <div class="create-blog-container">
-    <a class="create-blog" href="/create">
+  <div class="create-blog-button-container">
+    <a class="create-blog-button" href="/create">
       <img
         class="create-blog-icon"
         src="./images/add-button-opt.svg"
