--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -6,7 +6,7 @@
     %>
     <div class="content-container">
       <h1 class="create-blog-title">Add a new entry below!</h1>
-      <form action="/" method="POST" class="content">
+      <form action="/blogs" method="POST" class="content">
         <div class="create-blog-form">
           <div class="input-cluster">
             <div class="form-row">
