cleaned up a couple of pages.

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -7,7 +7,7 @@
     <div class="content">
       <h2 class="page-title">Add a new entry below!</h2>
       <div class="form-container">
-        <form action="/blogs" method="POST">
+        <form action="/" method="POST">
           <div class="form-column">
             <div class="form-row">
               <label for="book-title" class="label">Book Title</label>
