--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -12,7 +12,7 @@
       <div class="content-box">
         <div class="content-box-top">
           <div class="content-box-heading">
-            <h1 class="title"><%= blogs[i].bookTitle %></h1>
+            <a class="title" href="#"><%= blogs[i].bookTitle %></a>
             <h2 class="author"><%= blogs[i].author %></h2>
           </div>
           <div class="thumbnail">
