--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,10 +24,10 @@
     </li>
   </ul>
   <div class="create-blog-button-container">
-    <a class="create-blog-button" href="/create">
+    <a class="create-blog-button" href="/blogs/create">
       <img
         class="create-blog-icon"
-        src="./images/add-button-opt.svg"
+        src="../images/add-button-opt.svg"
         alt="An icon with a plus sign that directs you to the create page."
       />
     </a>
