--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -7,12 +7,13 @@
 
     <div class="content">
       <h2 class="page-title">All Blogs</h2>
-      <% if (blogs.length > 0) { %> <% for (var i = 0; i < blogs.length; i++ ) {
-      %>
+      <% if (blogs.length > 0) { %> <% for (var i = 0; i < blogs.length; i++ ) { %>
       <div class="content-box">
         <div class="content-box-top">
           <div class="content-box-heading">
-            <a class="title" href="#"><%= blogs[i].bookTitle %></a>
+            <a class="title" href="/blogs/<%= blogs[i].id %>">
+              <h3 class="title"><%= blogs[i].bookTitle %></h3>
+              </a>
             <h2 class="author"><%= blogs[i].author %></h2>
           </div>
           <div class="thumbnail">
