--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -22,9 +22,24 @@
           </div>
         </div>
         <div class="blog-snippet"><%= blog.blogContent %></div>
+        <div class="delete-button">
+          <a class="delete" data-doc="<%= blog.id %>"> DELETE BLOG! </a>
+        </div>
       </div>
-    </div>
+    </div>  
+    <script>
+      const trashcan = document.querySelector("a.delete");
 
-    
+      trashcan.addEventListener("click", (e) => {
+        const endpoint = `/blogs/${trashcan.dataset.doc}`;
+        console.log('beginning of event listener')
+
+
+        fetch(endpoint, {
+          method: "DELETE",
+        })
+          
+      });
+    </script>
   </body>
 </html> 
