--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -32,13 +32,15 @@
 
       trashcan.addEventListener("click", (e) => {
         const endpoint = `/blogs/${trashcan.dataset.doc}`;
-        console.log('beginning of event listener')
-
 
         fetch(endpoint, {
           method: "DELETE",
         })
-          
+        .then((response) => response.json())
+        .then((data) => (window.location.href = data.redirect)) 
+        .catch((err) => {
+          console.log(err);
+        });  
       });
     </script>
   </body>
