--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reading Blog | <%= title %></title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/contentBox.css" />
 </head>
