--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <div class="title-banner-container">
     <img
       class="title-banner-image"
-      src="../images/title-banner.svg"
+      src="../../images/title-banner.svg"
       alt="A banner displaying the 
         title: 'Books to Read'. The words sit on a shelf of books."
     />
