--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -27,7 +27,7 @@
     <a class="create-blog-button" href="/blogs/create">
       <img
         class="create-blog-icon"
-        src="../images/add-button-opt.svg"
+        src="../../images/add-button-opt.svg"
         alt="An icon with a plus sign that directs you to the create page."
       />
     </a>
